--- a/index.html
+++ b/index.html
@@ -9,27 +9,58 @@
 <h2 align="center"> Improve bilingual TTS using language and accent embedding strength modulator</h2>
 <div><b>Abstract:</b> .</div>
 
-<h4>1. Comparing the emotional expressiveness of different systems with non-parallel transfer: </h4>
+<h4>1. Comparing the speech naturalness and speaker similarity of different systems: </h4>
+<h5>English: </h4>
 <blockquote>
 <table>
-<tr><td colspan=2><span>1.1. 当然是多锻炼、长壮点！就问一句，感动不？</span></td></tr>
+<tr><td colspan=2><span>1.1. Drag the bars to adjust the volume level.</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
 <tr>
-<td><audio controls><source src="samples/1.mos/1.1/1-600373.wav"></audio></td>
-<td><audio controls><source src="samples/1.mos/1.2/2-600373.wav"></audio></td>
-<td><audio controls><source src="samples/1.mos/1.3/3-600373.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.1/000011.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.2/000011.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.3/000011.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>1.2. 在和你聊天啊，想要我帮忙就说。</span></td></tr>
+<tr><td colspan=2><span>1.2. It is mostly detected during childhood and student years itself.</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
 <tr>
-<td><audio controls><source src="samples/1.mos/1.1/1-600124.wav"></audio></td>
-<td><audio controls><source src="samples/1.mos/1.2/2-600124.wav"></audio></td>
-<td><audio controls><source src="samples/1.mos/1.3/3-600124.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.1/000028"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.2/000028"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.3/000028"></audio></td>
+</tr>
+<tr height="15px"></tr>
+<tr><td colspan=2><span>1.3. In other words, my employer is always telling me to do things.</span></td></tr>
+<tr>
+<td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
+</tr>
+<tr>
+<td><audio controls><source src="samples/1.mos/1.1/000033"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.2/000033"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.3/000033"></audio></td>
+</tr>
+<tr height="15px"></tr>
+<tr><td colspan=2><span>1.4. No food was available at the Press Club.</span></td></tr>
+<tr>
+<td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
+</tr>
+<tr>
+<td><audio controls><source src="samples/1.mos/1.1/210013"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.2/210013"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.3/210013"></audio></td>
+</tr>
+<tr height="15px"></tr>
+<tr><td colspan=2><span>1.5. Therefore, one cartridge case of this type was not recovered.</span></td></tr>
+<tr>
+<td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
+</tr>
+<tr>
+<td><audio controls><source src="samples/1.mos/1.1/210015"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.2/210015"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.3/210015"></audio></td>
 </tr>
 <tr height="15px"></tr>
 </table>
