--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <h2 align="center"> Improve bilingual TTS using language and accent embedding strength modulator</h2>
 <div><b>Abstract:</b> .</div>
 
-<h4>1. Comparing the speech naturalness and speaker similarity of different systems: </h4>
-<h5>English: </h4>
+<h3>1. Comparing the speech naturalness and speaker similarity of different systems: </h3>
+<h4>English: </h4>
 <blockquote>
 <table>
 <tr><td colspan=2><span>1.1. Drag the bars to adjust the volume level.</span></td></tr>
@@ -28,9 +28,9 @@
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
 <tr>
-<td><audio controls><source src="samples/1.mos/1.1/000028"></audio></td>
-<td><audio controls><source src="samples/1.mos/1.2/000028"></audio></td>
-<td><audio controls><source src="samples/1.mos/1.3/000028"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.1/000028.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.2/000028.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.3/000028.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
 <tr><td colspan=2><span>1.3. In other words, my employer is always telling me to do things.</span></td></tr>
@@ -38,9 +38,9 @@
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
 <tr>
-<td><audio controls><source src="samples/1.mos/1.1/000033"></audio></td>
-<td><audio controls><source src="samples/1.mos/1.2/000033"></audio></td>
-<td><audio controls><source src="samples/1.mos/1.3/000033"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.1/000033.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.2/000033.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.3/000033.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
 <tr><td colspan=2><span>1.4. No food was available at the Press Club.</span></td></tr>
@@ -48,9 +48,9 @@
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
 <tr>
-<td><audio controls><source src="samples/1.mos/1.1/210013"></audio></td>
-<td><audio controls><source src="samples/1.mos/1.2/210013"></audio></td>
-<td><audio controls><source src="samples/1.mos/1.3/210013"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.1/210013.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.2/210013.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.3/210013.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
 <tr><td colspan=2><span>1.5. Therefore, one cartridge case of this type was not recovered.</span></td></tr>
@@ -58,12 +58,13 @@
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
 <tr>
-<td><audio controls><source src="samples/1.mos/1.1/210015"></audio></td>
-<td><audio controls><source src="samples/1.mos/1.2/210015"></audio></td>
-<td><audio controls><source src="samples/1.mos/1.3/210015"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.1/210015.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.2/210015.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.3/210015.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
 </table>
 </blockquote>
+<h4>Chinese: </h4>
 </body>
 </html>
