--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h2 align="center"> Improve bilingual TTS using language and accent embedding strength modulator</h2>
 <div><b>Abstract:</b> .</div>
 
-<h3>1. Comparing the speech naturalness and speaker similarity of different systems: </h3>
+<h3>1. Comparing the speech naturalness and speaker similarity of different bilingual systems: </h3>
 <h4>English: </h4>
 <blockquote>
 <table>
@@ -65,6 +65,81 @@
 <tr height="15px"></tr>
 </table>
 </blockquote>
-<h4>Chinese: </h4>
+<h4>Mandarin: </h4>
+<h3>2. Decomposition: </h3>
+<blockquote>
+<table>
+<tr><td colspan=2><span>2.1. Drag the bars to adjust the volume level.</span></td></tr>
+<tr>
+<td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Dynamic accent embedding</td><td align=center width=200>Static accent embedding</td><td align=center width=200>Dynamic language embedding</td><td align=center width=200>Static language embedding</td>
+</tr>
+<tr>
+<td><audio controls><source src="samples/2.decom/1.1/000011.wav"></audio></td>
+<td><audio controls><source src="samples/2.decom/1.2/000011.wav"></audio></td>
+<td><audio controls><source src="samples/2.decom/1.3/000011.wav"></audio></td>
+</tr>
+<tr height="15px"></tr>
+<tr><td colspan=2><span>2.2. It is mostly detected during childhood and student years itself.</span></td></tr>
+<tr>
+<td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Dynamic accent embedding</td><td align=center width=200>Static accent embedding</td><td align=center width=200>Dynamic language embedding</td><td align=center width=200>Static language embedding</td>
+</tr>
+<tr>
+<td><audio controls><source src="samples/2.decom/1.1/000028.wav"></audio></td>
+<td><audio controls><source src="samples/2.decom/1.2/000028.wav"></audio></td>
+<td><audio controls><source src="samples/2.decom/1.3/000028.wav"></audio></td>
+</tr>
+<tr height="15px"></tr>
+</table>
+</blockquote>
+<h3>3. Control accent for cross-lingual TTS: </h3>
+<blockquote>
+<table>
+<tr><td colspan=2><span>3.1. Drag the bars to adjust the volume level.</span></td></tr>
+<tr>
+<td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Double Adjustment</td>
+</tr>
+<tr>
+<td><audio controls><source src="samples/3.control_cross/1.1/000011.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_cross/1.2/000011.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_cross/1.3/000011.wav"></audio></td>
+</tr>
+<tr height="15px"></tr>
+<tr><td colspan=2><span>3.2. It is mostly detected during childhood and student years itself.</span></td></tr>
+<tr>
+<td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Double Adjustment</td>
+</tr>
+<tr>
+<td><audio controls><source src="samples/3.control_crosss/1.1/000028.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_crosss/1.2/000028.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_crosss/1.3/000028.wav"></audio></td>
+</tr>
+<tr height="15px"></tr>
+</table>
+</blockquote>
+<h3>4. Control accent for code-switching: </h3>
+<blockquote>
+<table>
+<tr><td colspan=2><span>4.1. Drag the bars to adjust the volume level.</span></td></tr>
+<tr>
+<td align=center width=200>Base combination</td><td align=center width=200>New combination</td><td align=center width=200>Reference combination</td>
+</tr>
+<tr>
+<td><audio controls><source src="samples/3.control_cross/1.1/000011.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_cross/1.2/000011.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_cross/1.3/000011.wav"></audio></td>
+</tr>
+<tr height="15px"></tr>
+<tr><td colspan=2><span>4.2. It is mostly detected during childhood and student years itself.</span></td></tr>
+<tr>
+<td align=center width=200>Base combination</td><td align=center width=200>New combination</td><td align=center width=200>Reference combination</td>
+</tr>
+<tr>
+<td><audio controls><source src="samples/3.control_crosss/1.1/000028.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_crosss/1.2/000028.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_crosss/1.3/000028.wav"></audio></td>
+</tr>
+<tr height="15px"></tr>
+</table>
+</blockquote>
 </body>
 </html>
