--- a/index.html
+++ b/index.html
@@ -66,27 +66,33 @@
 </table>
 </blockquote>
 <h4>Mandarin: </h4>
-<h3>2. Decomposition: </h3>
+<h3>2. ESM component analysis: </h3>
 <blockquote>
 <table>
-<tr><td colspan=2><span>2.1. Drag the bars to adjust the volume level.</span></td></tr>
+<tr><td colspan=2><span>2.1. Children this age fight to get into the bathroom.</span></td></tr>
 <tr>
 <td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Dynamic accent embedding</td><td align=center width=200>Static accent embedding</td><td align=center width=200>Dynamic language embedding</td><td align=center width=200>Static language embedding</td>
 </tr>
 <tr>
-<td><audio controls><source src="samples/2.decom/1.1/000011.wav"></audio></td>
-<td><audio controls><source src="samples/2.decom/1.2/000011.wav"></audio></td>
-<td><audio controls><source src="samples/2.decom/1.3/000011.wav"></audio></td>
+<td><audio controls><source src="samples/2.decom/1.1/000009.wav"></audio></td>
+<td><audio controls><source src="samples/2.decom/1.2/000009.wav"></audio></td>
+<td><audio controls><source src="samples/2.decom/1.3/000009.wav"></audio></td>
+<td><audio controls><source src="samples/2.decom/1.4/000009.wav"></audio></td>
+<td><audio controls><source src="samples/2.decom/1.5/000009.wav"></audio></td>
+<td><audio controls><source src="samples/2.decom/1.6/000009.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>2.2. It is mostly detected during childhood and student years itself.</span></td></tr>
+<tr><td colspan=2><span>2.2. Next, the pores plug up and trap the oil inside.</span></td></tr>
 <tr>
 <td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Dynamic accent embedding</td><td align=center width=200>Static accent embedding</td><td align=center width=200>Dynamic language embedding</td><td align=center width=200>Static language embedding</td>
 </tr>
 <tr>
-<td><audio controls><source src="samples/2.decom/1.1/000028.wav"></audio></td>
-<td><audio controls><source src="samples/2.decom/1.2/000028.wav"></audio></td>
-<td><audio controls><source src="samples/2.decom/1.3/000028.wav"></audio></td>
+<td><audio controls><source src="samples/2.decom/1.1/000003.wav"></audio></td>
+<td><audio controls><source src="samples/2.decom/1.2/000003.wav"></audio></td>
+<td><audio controls><source src="samples/2.decom/1.3/000003.wav"></audio></td>
+<td><audio controls><source src="samples/2.decom/1.4/000003.wav"></audio></td>
+<td><audio controls><source src="samples/2.decom/1.5/000003.wav"></audio></td>
+<td><audio controls><source src="samples/2.decom/1.6/000003.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
 </table>
@@ -94,24 +100,24 @@
 <h3>3. Control accent for cross-lingual TTS: </h3>
 <blockquote>
 <table>
-<tr><td colspan=2><span>3.1. Drag the bars to adjust the volume level.</span></td></tr>
+<tr><td colspan=2><span>3.1. Genes of intracellular calcium metabolism and blood pressure control in primary hypertension.</span></td></tr>
 <tr>
 <td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Double Adjustment</td>
 </tr>
 <tr>
-<td><audio controls><source src="samples/3.control_cross/1.1/000011.wav"></audio></td>
-<td><audio controls><source src="samples/3.control_cross/1.2/000011.wav"></audio></td>
-<td><audio controls><source src="samples/3.control_cross/1.3/000011.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_cross/1.1/000004.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_cross/1.2/000004.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_cross/1.3/000004.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>3.2. It is mostly detected during childhood and student years itself.</span></td></tr>
+<tr><td colspan=2><span>3.2. The American people have learned from the depression.</span></td></tr>
 <tr>
 <td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Double Adjustment</td>
 </tr>
 <tr>
-<td><audio controls><source src="samples/3.control_crosss/1.1/000028.wav"></audio></td>
-<td><audio controls><source src="samples/3.control_crosss/1.2/000028.wav"></audio></td>
-<td><audio controls><source src="samples/3.control_crosss/1.3/000028.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_crosss/1.1/210014.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_crosss/1.2/210014.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_crosss/1.3/210014.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
 </table>
@@ -119,24 +125,24 @@
 <h3>4. Control accent for code-switching: </h3>
 <blockquote>
 <table>
-<tr><td colspan=2><span>4.1. Drag the bars to adjust the volume level.</span></td></tr>
+<tr><td colspan=2><span>4.1. 好呀，我们一起来听I fall in love too easily。</span></td></tr>
 <tr>
 <td align=center width=200>Base combination</td><td align=center width=200>New combination</td><td align=center width=200>Reference combination</td>
 </tr>
 <tr>
-<td><audio controls><source src="samples/3.control_cross/1.1/000011.wav"></audio></td>
-<td><audio controls><source src="samples/3.control_cross/1.2/000011.wav"></audio></td>
-<td><audio controls><source src="samples/3.control_cross/1.3/000011.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_cross/1.1/140008.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_cross/1.2/140008.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_cross/1.3/140008.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>4.2. It is mostly detected during childhood and student years itself.</span></td></tr>
+<tr><td colspan=2><span>4.2. 好的，为你播放抖音神曲twinkle twinkle little star。</span></td></tr>
 <tr>
 <td align=center width=200>Base combination</td><td align=center width=200>New combination</td><td align=center width=200>Reference combination</td>
 </tr>
 <tr>
-<td><audio controls><source src="samples/3.control_crosss/1.1/000028.wav"></audio></td>
-<td><audio controls><source src="samples/3.control_crosss/1.2/000028.wav"></audio></td>
-<td><audio controls><source src="samples/3.control_crosss/1.3/000028.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_crosss/1.1/140013.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_crosss/1.2/140013.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_crosss/1.3/140013.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
 </table>
