--- a/index.html
+++ b/index.html
@@ -66,6 +66,75 @@
 </table>
 </blockquote>
 <h4>Mandarin: </h4>
+<blockquote>
+<table>
+<tr><td colspan=2><span>1.6. </span></td></tr>
+<tr>
+<td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
+</tr>
+<tr>
+<td><audio controls><source src="samples/1.mos/1.1/090002.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.2/090002.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.3/090002.wav"></audio></td>
+</tr>
+<tr height="15px"></tr>
+<tr><td colspan=2><span>1.7. </span></td></tr>
+<tr>
+<td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
+</tr>
+<tr>
+<td><audio controls><source src="samples/1.mos/1.1/090008.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.2/090008.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.3/090008.wav"></audio></td>
+</tr>
+<tr height="15px"></tr>
+<tr><td colspan=2><span>1.8. </span></td></tr>
+<tr>
+<td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
+</tr>
+<tr>
+<td><audio controls><source src="samples/1.mos/1.1/090013.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.2/090013.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.3/090013.wav"></audio></td>
+</tr>
+<tr height="15px"></tr>
+</table>
+</blockquote>
+<h4>Code-switching: </h4>
+<blockquote>
+<table>
+<tr><td colspan=2><span>1.9. </span></td></tr>
+<tr>
+<td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
+</tr>
+<tr>
+<td><audio controls><source src="samples/1.mos/1.1/140004.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.2/140004.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.3/140004.wav"></audio></td>
+</tr>
+<tr height="15px"></tr>
+<tr><td colspan=2><span>1.10. </span></td></tr>
+<tr>
+<td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
+</tr>
+<tr>
+<td><audio controls><source src="samples/1.mos/1.1/140009.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.2/140009.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.3/140009.wav"></audio></td>
+</tr>
+<tr height="15px"></tr>
+<tr><td colspan=2><span>1.11. </span></td></tr>
+<tr>
+<td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
+</tr>
+<tr>
+<td><audio controls><source src="samples/1.mos/1.1/140020.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.2/140020.wav"></audio></td>
+<td><audio controls><source src="samples/1.mos/1.3/140020.wav"></audio></td>
+</tr>
+<tr height="15px"></tr>
+</table>
+</blockquote>
 <h3>2. ESM component analysis: </h3>
 <blockquote>
 <table>
@@ -115,9 +184,9 @@
 <td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Double Adjustment</td>
 </tr>
 <tr>
-<td><audio controls><source src="samples/3.control_crosss/1.1/210014.wav"></audio></td>
-<td><audio controls><source src="samples/3.control_crosss/1.2/210014.wav"></audio></td>
-<td><audio controls><source src="samples/3.control_crosss/1.3/210014.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_cross/1.1/210014.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_cross/1.2/210014.wav"></audio></td>
+<td><audio controls><source src="samples/3.control_cross/1.3/210014.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
 </table>
@@ -130,9 +199,9 @@
 <td align=center width=200>Base combination</td><td align=center width=200>New combination</td><td align=center width=200>Reference combination</td>
 </tr>
 <tr>
-<td><audio controls><source src="samples/3.control_cross/1.1/140008.wav"></audio></td>
-<td><audio controls><source src="samples/3.control_cross/1.2/140008.wav"></audio></td>
-<td><audio controls><source src="samples/3.control_cross/1.3/140008.wav"></audio></td>
+<td><audio controls><source src="samples/4.control_code/1.1/140008.wav"></audio></td>
+<td><audio controls><source src="samples/4.control_code/1.2/140008.wav"></audio></td>
+<td><audio controls><source src="samples/4.control_code/1.3/140008.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
 <tr><td colspan=2><span>4.2. 好的，为你播放抖音神曲twinkle twinkle little star。</span></td></tr>
@@ -140,9 +209,9 @@
 <td align=center width=200>Base combination</td><td align=center width=200>New combination</td><td align=center width=200>Reference combination</td>
 </tr>
 <tr>
-<td><audio controls><source src="samples/3.control_crosss/1.1/140013.wav"></audio></td>
-<td><audio controls><source src="samples/3.control_crosss/1.2/140013.wav"></audio></td>
-<td><audio controls><source src="samples/3.control_crosss/1.3/140013.wav"></audio></td>
+<td><audio controls><source src="samples/4.control_code/1.1/140013.wav"></audio></td>
+<td><audio controls><source src="samples/4.control_code/1.2/140013.wav"></audio></td>
+<td><audio controls><source src="samples/4.control_code/1.3/140013.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
 </table>
