--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <h4>Mandarin: </h4>
 <blockquote>
 <table>
-<tr><td colspan=2><span>1.6. </span></td></tr>
+<tr><td colspan=2><span>1.6. 下午啦，快醒醒，要开始工作啦。</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -78,7 +78,7 @@
 <td><audio controls><source src="samples/1.mos/1.3/090002.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>1.7. </span></td></tr>
+<tr><td colspan=2><span>1.7. 好的，小爱帮你找回记忆中的旋律。</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -88,7 +88,7 @@
 <td><audio controls><source src="samples/1.mos/1.3/090008.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>1.8. </span></td></tr>
+<tr><td colspan=2><span>1.8. 好的，轻柔的音乐，放松你疲惫的心灵。</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -103,7 +103,7 @@
 <h4>Code-switching: </h4>
 <blockquote>
 <table>
-<tr><td colspan=2><span>1.9. </span></td></tr>
+<tr><td colspan=2><span>1.9. 最良心的新款SUV！</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -113,7 +113,7 @@
 <td><audio controls><source src="samples/1.mos/1.3/140004.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>1.10. </span></td></tr>
+<tr><td colspan=2><span>1.10. 门缝里的大妈好V五。</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -123,7 +123,7 @@
 <td><audio controls><source src="samples/1.mos/1.3/140009.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>1.11. </span></td></tr>
+<tr><td colspan=2><span>1.11. C罗八任女友大盘点！</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
