--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <td><audio controls><source src="samples/1.mos/1.3/140005.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>1.11. 好的，小爱想陪你一起听，绿钻会员歌曲：see you again。</span></td></tr>
+<tr><td colspan=2><span>1.11. 好的，小爱想陪你一起听，绿钻会员歌曲：See You Again。</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -140,7 +140,10 @@
 <table>
 <tr><td colspan=2><span>2.1. Children this age fight to get into the bathroom.</span></td></tr>
 <tr>
-<td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Dynamic accent embedding</td><td align=center width=200>Static accent embedding</td><td align=center width=200>Dynamic language embedding</td><td align=center width=200>Static language embedding</td>
+<td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Dynamic phonology embedding</td><td align=center width=200>Static phonology embedding</td><td align=center width=200>Dynamic language embedding</td><td align=center width=200>Static language embedding</td>
+</tr>
+<tr>
+<td align=center width=200></td><td align=center width=200></td><td align=center width=200>(Articulation)</td><td align=center width=200>(Intonation)</td><td align=center width=200>(Speaking rate)</td><td align=center width=200>(Pause duration)</td>
 </tr>
 <tr>
 <td><audio controls><source src="samples/2.decom/1.1/000009.wav"></audio></td>
@@ -153,7 +156,10 @@
 <tr height="15px"></tr>
 <tr><td colspan=2><span>2.2. Next, the pores plug up and trap the oil inside.</span></td></tr>
 <tr>
-<td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Dynamic accent embedding</td><td align=center width=200>Static accent embedding</td><td align=center width=200>Dynamic language embedding</td><td align=center width=200>Static language embedding</td>
+<td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Dynamic phonology embedding</td><td align=center width=200>Static phonology embedding</td><td align=center width=200>Dynamic language embedding</td><td align=center width=200>Static language embedding</td>
+</tr>
+<tr>
+<td align=center width=200></td><td align=center width=200></td><td align=center width=200>(Articulation)</td><td align=center width=200>(Intonation)</td><td align=center width=200>(Speaking rate)</td><td align=center width=200>(Pause duration)</td>
 </tr>
 <tr>
 <td><audio controls><source src="samples/2.decom/1.1/000003.wav"></audio></td>
@@ -166,7 +172,7 @@
 <tr height="15px"></tr>
 </table>
 </blockquote>
-<h3>3. Control accent for cross-lingual TTS: </h3>
+<h3>3. Control phonology for enhance expressiveness: </h3>
 <blockquote>
 <table>
 <tr><td colspan=2><span>3.1. Genes of intracellular calcium metabolism and blood pressure control in primary hypertension.</span></td></tr>
@@ -191,12 +197,12 @@
 <tr height="15px"></tr>
 </table>
 </blockquote>
-<h3>4. Control accent for code-switching: </h3>
+<h3>4. Control phonology for smooth transition: </h3>
 <blockquote>
 <table>
 <tr><td colspan=2><span>4.1. 好呀，我们一起来听I fall in love too easily。</span></td></tr>
 <tr>
-<td align=center width=200>Base combination</td><td align=center width=200>New combination</td><td align=center width=200>Reference combination</td>
+<td align=center width=200>Base combination</td><td align=center width=200>Smooth transition</td><td align=center width=200>Reference combination</td>
 </tr>
 <tr>
 <td><audio controls><source src="samples/4.control_code/1.1/140008.wav"></audio></td>
@@ -206,7 +212,7 @@
 <tr height="15px"></tr>
 <tr><td colspan=2><span>4.2. 好的，为你播放抖音神曲twinkle twinkle little star。</span></td></tr>
 <tr>
-<td align=center width=200>Base combination</td><td align=center width=200>New combination</td><td align=center width=200>Reference combination</td>
+<td align=center width=200>Base combination</td><td align=center width=200>Smooth transition</td><td align=center width=200>Reference combination</td>
 </tr>
 <tr>
 <td><audio controls><source src="samples/4.control_code/1.1/140013.wav"></audio></td>
