--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h4>English: </h4>
 <blockquote>
 <table>
-<tr><td colspan=2><span>1.1. Drag the bars to adjust the volume level.</span></td></tr>
+<tr><td colspan=3><span>1.1. Drag the bars to adjust the volume level.</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -23,7 +23,7 @@
 <td><audio controls><source src="samples/1.mos/1.3/000011.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>1.2. It is mostly detected during childhood and student years itself.</span></td></tr>
+<tr><td colspan=3><span>1.2. It is mostly detected during childhood and student years itself.</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -33,7 +33,7 @@
 <td><audio controls><source src="samples/1.mos/1.3/000028.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>1.3. In other words, my employer is always telling me to do things.</span></td></tr>
+<tr><td colspan=3><span>1.3. In other words, my employer is always telling me to do things.</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -43,7 +43,7 @@
 <td><audio controls><source src="samples/1.mos/1.3/000033.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>1.4. No food was available at the Press Club.</span></td></tr>
+<tr><td colspan=3><span>1.4. No food was available at the Press Club.</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -53,7 +53,7 @@
 <td><audio controls><source src="samples/1.mos/1.3/210013.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>1.5. Therefore, one cartridge case of this type was not recovered.</span></td></tr>
+<tr><td colspan=3><span>1.5. Therefore, one cartridge case of this type was not recovered.</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -68,7 +68,7 @@
 <h4>Mandarin: </h4>
 <blockquote>
 <table>
-<tr><td colspan=2><span>1.6. 下午啦，快醒醒，要开始工作啦。</span></td></tr>
+<tr><td colspan=3><span>1.6. 下午啦，快醒醒，要开始工作啦。</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -78,7 +78,7 @@
 <td><audio controls><source src="samples/1.mos/1.3/090002.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>1.7. 好的，小爱帮你找回记忆中的旋律。</span></td></tr>
+<tr><td colspan=3><span>1.7. 好的，小爱帮你找回记忆中的旋律。</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -88,7 +88,7 @@
 <td><audio controls><source src="samples/1.mos/1.3/090008.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>1.8. 好的，轻柔的音乐，放松你疲惫的心灵。</span></td></tr>
+<tr><td colspan=3><span>1.8. 抱歉，查询有失败，请稍后再试吧。</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -103,7 +103,7 @@
 <h4>Code-switching: </h4>
 <blockquote>
 <table>
-<tr><td colspan=2><span>1.9. 最良心的新款SUV！</span></td></tr>
+<tr><td colspan=3><span>1.9. 最良心的新款SUV！</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -113,7 +113,7 @@
 <td><audio controls><source src="samples/1.mos/1.3/140004.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>1.10. Something Just Like This 1分钟试听版送给你。</span></td></tr>
+<tr><td colspan=3><span>1.10. Something Just Like This 1分钟试听版送给你。</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -123,7 +123,7 @@
 <td><audio controls><source src="samples/1.mos/1.3/140005.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>1.11. 好的，小爱想陪你一起听，绿钻会员歌曲：See You Again。</span></td></tr>
+<tr><td colspan=3><span>1.11. 好的，小爱想陪你一起听，绿钻会员歌曲：See You Again。</span></td></tr>
 <tr>
 <td align=center width=200>BASE</td><td align=center width=200>EM</td><td align=center width=200>ESM</td>
 </tr>
@@ -138,7 +138,7 @@
 <h3>2. ESM component analysis: </h3>
 <blockquote>
 <table>
-<tr><td colspan=2><span>2.1. Children this age fight to get into the bathroom.</span></td></tr>
+<tr><td colspan=3><span>2.1. Children this age fight to get into the bathroom.</span></td></tr>
 <tr>
 <td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Dynamic phonology embedding</td><td align=center width=200>Static phonology embedding</td><td align=center width=200>Dynamic language embedding</td><td align=center width=200>Static language embedding</td>
 </tr>
@@ -154,7 +154,7 @@
 <td><audio controls><source src="samples/2.decom/1.6/000009.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>2.2. Next, the pores plug up and trap the oil inside.</span></td></tr>
+<tr><td colspan=3><span>2.2. Next, the pores plug up and trap the oil inside.</span></td></tr>
 <tr>
 <td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Dynamic phonology embedding</td><td align=center width=200>Static phonology embedding</td><td align=center width=200>Dynamic language embedding</td><td align=center width=200>Static language embedding</td>
 </tr>
@@ -175,7 +175,7 @@
 <h3>3. Control phonology for enhance expressiveness: </h3>
 <blockquote>
 <table>
-<tr><td colspan=2><span>3.1. Genes of intracellular calcium metabolism and blood pressure control in primary hypertension.</span></td></tr>
+<tr><td colspan=3><span>3.1. Genes of intracellular calcium metabolism and blood pressure control in primary hypertension.</span></td></tr>
 <tr>
 <td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Double Adjustment</td>
 </tr>
@@ -185,7 +185,7 @@
 <td><audio controls><source src="samples/3.control_cross/1.3/000004.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>3.2. The American people have learned from the depression.</span></td></tr>
+<tr><td colspan=3><span>3.2. The American people have learned from the depression.</span></td></tr>
 <tr>
 <td align=center width=200>Base combination</td><td align=center width=200>Reference combination</td><td align=center width=200>Double Adjustment</td>
 </tr>
@@ -200,7 +200,7 @@
 <h3>4. Control phonology for smooth transition: </h3>
 <blockquote>
 <table>
-<tr><td colspan=2><span>4.1. 好呀，我们一起来听I fall in love too easily。</span></td></tr>
+<tr><td colspan=3><span>4.1. 好呀，我们一起来听I fall in love too easily。</span></td></tr>
 <tr>
 <td align=center width=200>Base combination</td><td align=center width=200>Smooth transition</td><td align=center width=200>Reference combination</td>
 </tr>
@@ -210,7 +210,7 @@
 <td><audio controls><source src="samples/4.control_code/1.3/140008.wav"></audio></td>
 </tr>
 <tr height="15px"></tr>
-<tr><td colspan=2><span>4.2. 好的，为你播放抖音神曲twinkle twinkle little star。</span></td></tr>
+<tr><td colspan=3><span>4.2. 好的，为你播放抖音神曲twinkle twinkle little star。</span></td></tr>
 <tr>
 <td align=center width=200>Base combination</td><td align=center width=200>Smooth transition</td><td align=center width=200>Reference combination</td>
 </tr>
