fix grammatical mistake

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 <tr height="15px"></tr>
 </table>
 </blockquote>
-<h3>3. Control phonology for enhance expressiveness: </h3>
+<h3>3. Control phonology for enhancing expressiveness: </h3>
 <blockquote>
 <table>
 <tr><td colspan=3><span>3.1. Genes of intracellular calcium metabolism and blood pressure control in primary hypertension.</span></td></tr>
